--- a/styles.css
+++ b/styles.css
@@ -139,15 +139,21 @@ body {
     border-top: none; /* Remove any border */
 }
 
+/* Smooth wave shape behind carousel - 30 to 70, more wavy */
 .hero-container::before {
     content: '';
     position: absolute;
-    top: -50px;
-    right: -50px;
-    width: 200px;
-    height: 200px;
-    border-radius: 50%;
-    background: var(--primary-subtle);
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    background: var(--primary);
+    -webkit-mask: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100' preserveAspectRatio='none'%3E%3Cpath d='M 30,0 L 100,0 L 100,100 L 70,100 C 62,88 56,75 52,62 C 48,50 45,38 43,28 C 41,18 37,8 33,3 C 31,1 30,0 30,0 Z' fill='white'/%3E%3C/svg%3E");
+    mask: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100' preserveAspectRatio='none'%3E%3Cpath d='M 30,0 L 100,0 L 100,100 L 70,100 C 62,88 56,75 52,62 C 48,50 45,38 43,28 C 41,18 37,8 33,3 C 31,1 30,0 30,0 Z' fill='white'/%3E%3C/svg%3E");
+    -webkit-mask-size: 100% 100%;
+    mask-size: 100% 100%;
+    -webkit-mask-repeat: no-repeat;
+    mask-repeat: no-repeat;
     z-index: 0;
 }
 
